# visual_similarity_sop

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: explore_dataset.ipynb
scripts/: eval_retrieval.py  evaluate_retrieval_within_split.py  export_tensorboard_projector.py  extract_embeddings.py  extract_embeddings_finetuned.py  query_real_world_images.py  train_metric_learning.py  train_metric_learning_updated.py  visualise_dataset.py  visualise_embeddings.py  visualise_retrievals.py
