[project]
name = "visual-similarity-sop"
version = "0.1.0"
description = "Visual similarity for the Stanford Online Products dataset"
authors = [
    {name = "Samuel Omole",email = "Samuel.Omole@stfc.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
